@@ -23,6 +23,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -49,10 +50,12 @@ public class ListExchangeRequestedByOthersHandler {
         Page<ExchangeRequest> paged
                 = exchangeRequestRepository.findAllByRequestedMemberIdAndExchangeRequestStatus(new MemberId(requestedMemberId), exchangeRequestStatus, pageRequest);
 
-        List<InsightId> requestedInsightIds = paged.getContent().stream()
-                .map(ExchangeRequest::getRequestedInsightId).collect(Collectors.toList());
-        List<Insight> requestedInsights = insightRepository.findAllByIds(requestedInsightIds);
-        List<InsightResponse> insightResponses = getInsightResponses(requestedInsights);
+        List<InsightId> requestMemberInsightIds = paged.getContent().stream()
+                .map(ExchangeRequest::getRequestMemberInsightId)
+                .filter(Objects::nonNull)
+                .toList();
+        List<Insight> requestMemberInsights = insightRepository.findAllByIds(requestMemberInsightIds);
+        List<InsightResponse> insightResponses = getInsightResponses(requestMemberInsights);
         return new PageImpl<>(insightResponses, paged.getPageable(), paged.getTotalElements());
     }
 
